# yast-auth-server

./: .gitignore  .travis.yml  COPYING.MIT  Dockerfile  MAINTAINER  README.md  RPMNAME  Rakefile  SUBDIRS  configure.in.in  suseobjects.ldif
.github/workflows/: ci.yml
agent/: Makefile.am  SlapdConfigAgent.cc  SlapdConfigAgent.h  Y2CCSlapdConfigAgent.cc
doc/: Makefile.am
doc/autodocs/: Makefile.am
lib/: Makefile.am  slapd-config.cpp  slapd-config.h
package/: yast2-auth-server.changes  yast2-auth-server.spec
src/: Makefile.am
src/autoyast-rnc/: auth-server.rnc  ldap-server.rnc
src/clients/: auth-server.rb  auth-server_auto.rb  auth-server_proposal.rb  krb-server.rb  ldap-server.rb  new_krb_inst.rb  openldap-mirrormode.rb
src/desktop/: auth-server.desktop  krb-server.desktop  ldap-server.desktop  new-dir-srv.desktop  new-krb-srv.desktop  openldap-mirrormode.desktop  org.opensuse.yast.KrbServer.desktop  org.opensuse.yast.LDAPServer.desktop
src/include/auth-server/: complex.rb  dialogs.rb  helps.rb  kerberos_advanced.rb  mirrormode-wizard.rb  tree_structure.rb  widgets.rb  wizards.rb
src/lib/authserver/cli/: auth-cli.rb
src/lib/authserver/dir/: client.rb  ds389.rb
src/lib/authserver/krb/: mit.rb
src/lib/authserver/ui/: deprecation.rb  new_dir_inst.rb  new_krb_inst.rb
src/modules/: AuthServer.pm  Ldap.rb  LdapDatabase.rb  LdapPopup.rb
src/modules/YaPI/: LdapServer.pm
src/scrconf/: cfg_openldap.scr  kadmin.scr  kdc_conf.scr  krb5_conf.scr  ldapserver.scr
src/servers_non_y2/: ag_kadmin  ag_kerberos
test/: dir_test.rb  krb_test.rb  test_helper.rb
testsuite/: full-test.pl  testacl-0.ldif  testacl-1.ldif  testacl-2.ldif  testacl-3.ldif
tools/: Makefile.am  ldap-server-ssl-check.cpp
